manifests/app/namespaces/core/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: api
        image: registry.digitalocean.com/studidevops-sukma/books-api:13 # {"$imagepolicy": "flux-system:api"}
        resources:
          limits:
            memory: "500Mi"
            cpu: "1"
          requests:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
