manifests/app/namespaces/core/api/external.yaml
kind: Service
apiVersion: v1
metadata:
  name: api
spec:
  type: ExternalName
  externalName: api.core.svc
